--- a/index.html
+++ b/index.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dice Game from Natthathida Raikhunthod</title>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Dice game from Natthathida</title>
     <link rel="stylesheet" href="game.css">
-</head>
-<body>
+  </head>
+  <body>
 
-    <div class="wrapper">
-        <h1 class = "title">Refresh Me! </h1>
-
-        <div class="dice-area">
-            <p>Player 1</p>
-            <img class = "dice1" src = "assets/dice1.png"assets>
-        </div>
-
-        ><div class="dice-area">
-            <p>Player 2</p>
-            <img class = "dice1" src = "assets/dice1.png"assets>
-        </div>
+    <h1 class = "title">Refresh Me! </h1>
+    <div class = "container">
+    <div class = "player1">
+      <h3>Player 1</h3>
+      <img class = "dice1" src = "assets/dice1.png">
+    </div>
+    <div class = "player2">
+        <h3>Player 2</h3>
+        <img class = "dice2" src = "assets/dice1.png">
+    </div>
 
     </div>
-    <footer>
-      <h3>
-        <strong><a href="https://appbrewery.com/"><U> appbrewery.com </U></a></strong>
-      </h3>
-      <h3>
-        <strong><a href="https://github.com/mildnatthathida"><U> My GitHup </U></a></strong>
-      </h3>
-    </footer>
-    <script src="game.js"></script>
-</body>
+
+    <footer>Credit: https://www.appbrewery.co/</footer>
+    <footer>Modify new version: Natthathida.</footer>
+    <script src="game.js" charset="utf-8"></script>
+  </body>
 </html>
