--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     </div>
 
-    <footer>Credit: https://www.appbrewery.co/</footer>
-    <footer>Modify new version: Natthathida.</footer>
+    <h4>Credit: https://www.appbrewery.co/</h4>
+    <h4>Modify new version: Natthathida.</h4>
     <script src="game.js" charset="utf-8"></script>
   </body>
 </html>
