--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
         <h3>Player 2</h3>
         <img class = "dice2" src = "assets/dice1.png">
     </div>
-
     </div>
-
-    <h4>Credit: https://www.appbrewery.co/</h4>
-    <h4>Modify new version: Natthathida.</h4>
+    <div class="footer">
+      <h2>Natthathida R.</h2>
+      <a href="https://github.com/mildnatthathida">🎲My github🎲</a>
+      <p>
+        <a href="https://appbrewery.com/">http🎲Appbrewery🎲com</a>
+      </p>
+    </div>
     <script src="game.js" charset="utf-8"></script>
   </body>
 </html>
